feat(all): update internal and public links for data exchange
